# Consmumer-Redis

./: README.md
redis_python_client/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  test_manual.py
redis_python_client/.github/workflows/: ci.yml
redis_python_client/src/: main.py
redis_python_client/src/api/: __init__.py  redis_routes.py
redis_python_client/src/core/: __init__.py  config.py  dependencies.py
redis_python_client/src/redis_client/: __init__.py  async_client.py  client.py  config.py  exceptions.py  utils.py
redis_python_client/src/services/: __init__.py  redis_service.py
redis_python_client/tests/: test_api_async.py  test_redis_service_async.py
